# FoundationPoseROS

./: .gitignore  LICENSE  README.md  commands.txt  requirements.txt  requirements_fdpose.txt
config/launch_files/: apriltag_detection.launch  kinect_driver.launch  rs_aligned_depth.launch  rs_camera.launch  rs_multiple_devices.launch
config/rviz/: FoundationPoseROS1_K4A.rviz  FoundationPoseROS1_RS.rviz  FoundationPoseROS1_RS_new.rviz
docker/: .env  Dockerfile.ros1  config.sh  container_handler.sh  container_installation.md  docker-compose.yaml  generate_env.sh
docker/config/: 10_nvidia.json  nvidia_icd.json
notebooks/: image_viewer.ipynb
recordings/: .gitignore
recordings/ros/: cam_K.txt  prompts_ros_image.yaml
recordings/ros_test/: ob_in_cam_000000.txt
scripts/: config.sh  download_models.sh  install_foundationpose.sh  install_sam2.sh  launch_apriltag.sh  launch_azure_kinect_camera.sh  launch_realsense_camera.sh  ros_config.sh
source/RosPoseToolkit/: pyproject.toml
source/RosPoseToolkit/pose_toolkit/gui/: __init__.py  main_window.py  segmentation_window.py
source/RosPoseToolkit/pose_toolkit/rendering/: offscreen_renderer.py
source/RosPoseToolkit/pose_toolkit/ros_helper/ros1/: __init__.py  fdpose_node.py  image_listener.py  utils.py
source/RosPoseToolkit/pose_toolkit/utils/: __init__.py  colors_info.py  commons.py
source/RosPoseToolkit/pose_toolkit/wrappers/: foundationpose.py
tools/: 01_run_sam2_mask_annotator.py  02_run_sam2_video_segmentation.py  03_run_fdpose_tracker.py  run_foundation_pose_node.py  run_foundation_pose_panel.py
(+2 files in other folders)
