[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ros_pose_toolkit"
version = "1.0.0"
description = "A toolkit for pose estimation and tracking in ROS."
requires-python = ">=3.10"
license = { "text" = "MIT" }
authors = [
    { name = "Jikai Wang", email = "jikai.wang@utdallas.edu" }
]

[tool.setuptools]
packages = ["pose_toolkit"]

# No [project.dependencies] section because requirements.txt is used
